[package]
name = "simple-cron"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
chrono = "0.4.11"

[dev-dependencies]
proptest = "0.10.0"
